--- a/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" type="text/css" href="schoolInformationMenu/roomTab/roomTab.css">
-
 <section ng-controller="roomTabCtrl">
 
 
@@ -34,11 +32,11 @@
 
     <tr ng-repeat="room in roomsArray">
       <td>
-        {{room.Name}}
+        {{room.name}}
       </td>
       <td>
         <ul>
-          <li class="dotlessList" ng-repeat="roomType in room.RoomTypes">
+          <li class="dotlessList" ng-repeat="roomType in room.roomTypes">
             {{roomType}}
           </li>
         </ul>
@@ -49,23 +47,5 @@
         </md-button>
       </td>
     </tr>
-
-    <!--<tr ng-repeat="r in roomsArray">
-      <td>
-        <input type="text" name="roomName" ng-model="r.roomName"/>
-      </td>
-      <td class="coursName">
-        <select chosen multiple display-selected-options="false" class="coursName" no-results-text="'Pas de type de salle trouvé pour:'"
-                placeholder-text-multiple="'Pas de type de salle selectionné pour le moment'" ng-options="rt.roomType for rt in roomTypesArray"
-                ng-model="r.roomType">
-          <option value=""></option>
-        </select>
-      </td>
-      <td>
-        <md-button class="md-icon-button" aria-label="supprimmer cette salle" ng-click="removeRoom($index)">
-          <md-icon>delete</md-icon>
-        </md-button>
-      </td>
-    </tr> !-->
   </table>
 </section>
