--- a/projects/IHM/app/index.html
+++ b/projects/IHM/app/index.html
@@ -41,6 +41,7 @@
       <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
       <script src="./bower_components/chosen/chosen.jquery.js"></script>
       <script src="./bower_components/angular-chosen-localytics/dist/angular-chosen.min.js"></script>
+      <script src="bower_components/angularjs-dropdown-multiselect/src/angularjs-dropdown-multiselect.js"></script>
 
       <script src="./bower_components/angular/angular.js"></script>
       <script src="./bower_components/angular-route/angular-route.js"></script>
