--- a/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
@@ -14,7 +14,7 @@
       </td>
       <td>
         <!--<md-button class="md-raised md-primary" ng-cliaddRoomTypeject()">+</md-button>-->
-        <md-button class="md-icon-button" aria-label="Use Android" ng-click="addRoomType()">
+        <md-button class="md-icon-button" ng-click="addRoomType()">
           <md-icon>add</md-icon>
         </md-button>
       </td>
