--- a/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
+++ b/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
@@ -28,9 +28,9 @@
         </md-button>
       </td>
     </tr>
-    <tr ng-repeat="subject in subjectsArray track by subject.subjectName">
+    <tr ng-repeat="subject in subjectsArray track by subject.name">
       <td>
-        {{subject.subjectName}}
+        {{subject.name}}
       </td>
       <td>
         {{subject.roomType}}
