--- a/projects/IHM/app/index.html
+++ b/projects/IHM/app/index.html
@@ -60,6 +60,7 @@
       <script src="programmeMenu/programmeMenu.js"></script>
       <script src="programmeMenu/gradeClassesTab/gradeClassesTab.js"></script>
       <script src="programmeMenu/subjectsTab/subjectsTab.js"></script>
+      <script src="programmeMenu/programmeTab/programmeTab.js"></script>
 
       <script src="teacherMenu/teacherTab/teacherTab.js"></script>
       <script src="teacherMenu/teacherMenu.js"></script>
