--- a/projects/IHM/app/programmeMenu/programmeTab/programmeTab.html
+++ b/projects/IHM/app/programmeMenu/programmeTab/programmeTab.html
@@ -9,7 +9,7 @@
     <tr>
       <th></th>
       <th scope="col" ng-repeat="subject in subjectArray">
-        {{subject.subjectName}}
+        {{subject.name}}
       </th>
     </tr>
 
