--- a/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
+++ b/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
@@ -1,4 +1,9 @@
 <h3>Matières</h3>
+
+<p>
+  Rajoutez des matières (ex: Tp de Physique, type de salle : TP-Physique)
+</p>
+
 <div ng-controller="subjectsTabCtrl">
 
   <table id="subjectTable" class="framedTable">
