--- a/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
@@ -4,7 +4,9 @@
 
 
   <h3>Salle</h3>
-
+  <p>
+    Rentrez des salles (ex: C121, type: TP-Physique, capacité : 25)
+  </p>
   <table class="framedTable">
     <tr>
       <th>Nom</th>
