--- a/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
@@ -1,7 +1,9 @@
 <h3>Type de salle</h3>
 <div ng-controller="roomTypeTabCtrl">
   <!--TODO:LANG-->
-  Ajoutez/ supprimmez des type de salle
+  <p>
+  Ajoutez/ supprimez des types de salle
+  </p>
 
   <table id="subjectTable" class="framedTable">
     <tr>
