--- a/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
+++ b/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
@@ -1,7 +1,13 @@
 <section ng-controller="teacherTabCtrl">
 
   <!--<div class="tabcontent" onload="genereTableau()">-->
-  <div class="tabcontent">
+  <div class="tabcontent" expanded="false">
+
+    <h3>Enseignants</h3>
+
+    <p>
+      Rentrez des professeurs (ex: John Smith, Matières : Mathématiques - Physique - Chimie, Commentaire : "Doyen du collège")
+    </p>
 
     <table id="teacherTab" class="framedTable">
       <tr>
