--- a/projects/IHM/app/homeMenu/homeMenu.html
+++ b/projects/IHM/app/homeMenu/homeMenu.html
@@ -1,12 +1,12 @@
 <div ng-controller="homeMenuCtrl">
 	<div style="display:none" ng-model="page"></div>
-	<div class="tab">
+	<div class="tab" expanded="false">
 		<button id="homeSave" class="tablinks" ng-click="save()">Sauver la configuration <br/> actuelle</button>
 		<button id="homeLoad" class="tablinks" ng-click="load()">Charger une configuration <br/>  </button>
 		<button id="homeGen" class="tablinks" ng-click="generate()"> Generer l'emploi du temps </button>
 	</div>
 
-	<div class="tabcontent">
+	<div class="tabcontent" expanded="false">
 		<h1>Accueil</h1>
 		<p>Bienvenue sur ETOILE</p>
 		<h2>Qu'est ce qu'ETOILE ?</h2>
