--- a/projects/IHM/app/teacherMenu/teacherMenu.html
+++ b/projects/IHM/app/teacherMenu/teacherMenu.html
@@ -1,7 +1,7 @@
 
 <section ng-controller="teacherMenuCtrl">
 
-  <div class="tab">
+  <div class="tab" expanded="false">
     <button id='tchEnseignants' class="tablinks" onclick="openTab('teacherMenu/teacherTab/teacherTab.html', 'tchEnseignants')">Enseignant</button>
   </div>
 
