--- a/projects/IHM/app/programmeMenu/gradeClassesTab/gradeClassesTab.html
+++ b/projects/IHM/app/programmeMenu/gradeClassesTab/gradeClassesTab.html
@@ -1,62 +1,69 @@
 <h3>Niveaux - Classes</h3>
 
 <p>
-    rajoutez des niveaux ou classes (ex: 3<sup>e</sup>A)
-</p>
+  rajoutez des niveaux ou classes (ex: 3<sup>e</sup>A) </p>
 
 <div ng-controller="gradeClassesTabCtrl">
-{{JSON.stringify(grades)}}
+  {{JSON.stringify(grades)}}
 
-    <table class="framedTable">
-        <tr>
-            <th>Niveaux</th>
-            <th>Classes</th>
-        </tr>
-        <tr ng-repeat-start="(indexGrade , grade) in grades">
-            <td>{{grade.name}}</td>
-            <td>
-            </td>
-            <td>
-                <md-button class="md-icon-button" ng-click="deleteGrade(indexGrade)">
-                    <md-icon>delete</md-icon>
-                </md-button>
-            </td>
+  <table class="framedTable">
+    <tr>
+      <th>Niveaux</th>
+      <th>Classes</th>
+      <th>Capacité</th>
+    </tr>
 
-        </tr>
+    <tr ng-repeat-start="(indexGrade , grade) in grades">
+      <td>{{grade.name}}</td>
+      <td></td>
+      <td></td>
+      <td>
+        <md-button class="md-icon-button" ng-click="deleteGrade(indexGrade)">
+          <md-icon>delete</md-icon>
+        </md-button>
+      </td>
+    </tr>
 
-        <tr ng-repeat="(indexClass , classe) in grade.classes" >
-            <td>
-            </td>
-            <td>
-                {{classe.name}}
-            </td>
-            <td>
-                <md-button class="md-icon-button" ng-click="deleteClass(indexGrade,indexClass)">
-                    <md-icon>delete</md-icon>
-                </md-button>
-            </td>
-        </tr>
-        <tr ng-repeat-end>
-            <td></td>
-            <td>
-                <input type="text" ng-model="inputClass[indexGrade]" ng-keypress="keyPressedClass($event.keyCode, indexGrade)">
-            </td>
-            <td>
-                <md-button class="md-icon-button" ng-click="addClass(indexGrade)">
-                    <md-icon>add</md-icon>
-                </md-button>
-            </td>
-        </tr>
-        <tr >
-            <td>
-                <input type="text" ng-model="inputGrade" ng-keypress="keyPressedGrade($event.keyCode)">
-            </td>
-            <td></td>
-            <td>
-                <md-button class="md-icon-button" ng-click="addGrade()">
-                    <md-icon>add</md-icon>
-                </md-button>
-            </td>
-        </tr>
-    </table>
+    <tr ng-repeat="(indexClass , class) in grade.classes">
+      <td></td>
+      <td>
+        {{class.name}}
+      </td>
+      <td>
+        {{class.studentNumber}}
+      </td>
+      <td>
+        <md-button class="md-icon-button" ng-click="deleteClass(indexGrade,indexClass)">
+          <md-icon>delete</md-icon>
+        </md-button>
+      </td>
+    </tr>
+
+    <tr ng-repeat-end>
+      <td></td>
+      <td>
+        <input type="text" ng-model="inputClass[indexGrade]" ng-keypress="keyPressedClass($event.keyCode, indexGrade)">
+      </td>
+      <td>
+        <input type="number" ng-model="inputStudentNumber[indexGrade]" ng-keypress="keyPressedClass($event.keyCode, indexGrade)">
+      </td>
+      <td>
+        <md-button class="md-icon-button" ng-click="addClass(indexGrade)">
+          <md-icon>add</md-icon>
+        </md-button>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        <input type="text" ng-model="inputGrade" ng-keypress="keyPressedGrade($event.keyCode)">
+      </td>
+      <td></td>
+      <td>
+        <md-button class="md-icon-button" ng-click="addGrade()">
+          <md-icon>add</md-icon>
+        </md-button>
+      </td>
+    </tr>
+  </table>
 </div>
