--- a/projects/server/htmlTest/indexTest.html
+++ b/projects/server/htmlTest/indexTest.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Communication avec le serveur</h1>
 
-        <script src="/home/pl/git/pld-smartcity/PLD-SmartCity/projects/server/htmlTest/clientTest.js"></script>
+		<script src="oXHR.js"></script>
+        <script src="clientTest.js"></script>
     </body>
 </html>
